[#105] fixed a bug with scrollbar that overlaps menu section

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f8f8f8; 
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #dcdcdc; 
+}
